* 调整composer.json的name属性

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "xudianyang/yafrk",
+  "name": "yafrk",
   "type": "library",
   "description": "yafrk global library",
   "keywords": [],
